<resources>
    <string name="app_name">Shoppping Management</string>
    <string name="if_you_are_not_ragistered_click_hare_for">If you are not Ragistered ! Click hare for</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Product Name</string>
    <string name="enter_product__code">Enter Product Code</string>
    <string name="enter_product_prize">Enter Product Prize</string>
    <string name="enter_product_unit">Enter Product Unit</string>
    <string name="save_info">Customer Info</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_customer_phone">Enter Customer Phone</string>
    <string name="enter_customer_address">Enter Customer Address</string>
    <string name="saveinfo">Product Save</string>
    <string name="enter_product_code">Enter Product Code</string>
    <string name="enter_product_quantity">Enter Product Quantity</string>
    <string name="sells">Sells</string>
</resources>
