<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky"
    android:orientation="vertical"
    tools:context=".Product_Registration">


    <EditText
        android:id="@+id/P_Code_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:hint="@string/enter_product_code"
        />

    <EditText
        android:id="@+id/P_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:inputType="text"
        />


    <EditText
        android:id="@+id/P_Prize_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:hint="@string/enter_product_prize"
        />

    <EditText
        android:id="@+id/P_Unit_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:hint="@string/enter_product_unit"
        />

    <Button
        android:id="@+id/P_Registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveinfo"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/sky"

        />

</LinearLayout>