<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sky"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10sp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/Password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10sp"
        android:hint="@string/enter_password"
        android:textSize="24sp"
        android:inputType="number"

        />

    <Button
        android:id="@+id/Login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@color/sky"
        android:textSize="24sp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20sp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_you_are_not_ragistered_click_hare_for"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/signup_Textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/red"
            />

    </LinearLayout>

</LinearLayout>