<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/sky"
android:orientation="vertical"
tools:context=".Customer_Info">


        <EditText
            android:id="@+id/C_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_customer_name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/C_phone_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:hint="@string/enter_customer_phone"
            />

        <EditText
            android:id="@+id/C_address_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:hint="@string/enter_customer_address"
            />

        <Button
            android:id="@+id/C_Info_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_info"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:background="@color/sky"

            />


</LinearLayout>